--- a/app/views/shared/_analytics.html.erb
+++ b/app/views/shared/_analytics.html.erb
@@ -71,6 +71,9 @@
     <div class="disclaimer">
       <p>*Increase/Decrease compared to last week</p>
     </div>
+    <div class="data-section-title">
+      <h2>Your widgets performance</h2>
+    </div>
     <%# <div class="worst-performer-wrapper">
       <div class="worst-performer">
         <div class="worst-performer-text">
