--- a/app/views/shared/_global_stats.html.erb
+++ b/app/views/shared/_global_stats.html.erb
@@ -1,30 +1,27 @@
 <div class="widgets-stats-wrapper">
   <div class="widgets-clicks-wrapper">
-    <div class="widgets-clicks">
-      <p>Most clicks:</p>
-      <h4><%= @most_clicks %></h4>
-    </div>
+
     <div class="widgets-clicks-chart">
-      <%= column_chart ContentAccess.joins(:widget).group(:product_title).count, label: "Clicks", ytitle: "Number of Clicks" %>
-      <%= pie_chart ContentAccess.group(:source).count %>
+      <div class="clicks-column-wrapper">
+        <h4>Number of clicks</h4>
+        <%= bar_chart ContentAccess.joins(:widget).group(:product_title).count, label: "Clicks"%>
+      </div>
+      <div class="clicks-pie-wrapper">
+        <h4>Most popular source</h4>
+        <%= pie_chart ContentAccess.group(:source).count %>
+      </div>
     </div>
   </div>
   <div class="widgets-session-time-wrapper">
-    <div class="widgets-session-time">
-      <p>Most time:</p>
-      <h4><%= @most_time %></h4>
-    </div>
     <div class="widgets-session-time-chart">
-      <%= bar_chart WidgetAccess.joins(:widget).group(:product_title).sum(:session_time), label: "Seconds", xtitle: "Time per widget" %>
+      <h4>Time per widget in seconds</h4>
+      <%= bar_chart WidgetAccess.joins(:widget).group(:product_title).sum(:session_time), label: "Seconds"%>
     </div>
   </div>
   <div class="widgets-session-wrapper">
-    <div class="widgets-session">
-      <p>Most sessions:</p>
-      <h4><%= @most_sessions %> </h4>
-    </div>
     <div class="widgets-session-chart">
-      <%= bar_chart WidgetAccess.joins(:widget).group(:product_title).count, label: "Sessions", xtitle: "Number of Sessions"%>
+      <h4>Most sessions</h4>
+      <%= bar_chart WidgetAccess.joins(:widget).group(:product_title).count, label: "Sessions"%>
     </div>
   </div>
 
