--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,7 +8,7 @@
   border-radius: 12px;
   background-color: white;
   // box-shadow: 5px 7px 15px 6px rgba(0,0,0,0.2);
-  border: solid 1px rgb(246, 244, 244);
+  border: 1px solid rgb(220, 220, 220);
   margin: 20px;
   cursor: pointer;
 }
