--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -81,7 +81,7 @@ canvas {
 }
 
 .data-section-title {
-  padding: 0 24px;
+  padding: 24px 24px 0 24px;
   span i {
     font-size: 26px;
     opacity: .7;
@@ -347,4 +347,33 @@ canvas {
   p, h4 {
     margin-bottom: 0;
   }
+}
+
+
+[data-tooltip]:before {
+  /* needed - do not touch */
+  content: attr(data-tooltip);
+  position: absolute;
+  opacity: 0;
+
+  /* customizable */
+  transition: all 0.15s ease;
+  font-size: 12px;
+  padding: 4px;
+  color: #333;
+  border-radius: 8px;
+}
+
+[data-tooltip]:hover:before {
+  /* needed - do not touch */
+  opacity: 1;
+
+  /* customizable */
+  background: #DBDFE2;
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+[data-tooltip]:not([data-tooltip-persistent]):before {
+  pointer-events: none;
 }
